--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Muktadirul675/lr-ibcf.git"
+    "url": "git+https://github.com/Muktadirul675/lr-ibcf.git"
   },
   "keywords": [
     "recommendation",
